--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -136,6 +136,7 @@
        transform: translateY(-50%);
        z-index: 1;
        color: white;
+       left: 106%;
        }
        
        .carousel-arrow-container .MuiSvgIcon-root:first-child {
