--- a/src/styles/_apropos.scss
+++ b/src/styles/_apropos.scss
@@ -34,20 +34,20 @@
 }
 @media screen and  (min-width: 2561px)  {
      .kasa-apropos{
-          
+          margin-bottom: 270px;
           .kasa-apropos_section1{
               left: 9%;
-              width: 80%;
+              width: 85%;
           }
      }
 }     
 
 @media screen and  (min-width: 1500px) and (max-width: 2560px) {
      .kasa-apropos{
-          
+          margin-bottom: 270px;
           .kasa-apropos_section1{
               left: 9%;
-              width: 80%;
+              width: 84%;
           }
      }
 }
