--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -44,7 +44,7 @@
           .kasa-logement_body{
                position: absolute;
                width: 1240px;
-               width: 82%;
+               width: 87%;
                height: 643px;
                left: 7%;
                top: 128px;
@@ -79,17 +79,100 @@
      }
      
 }     
-
- @media screen and  (min-width: 1441px) and (max-width: 2560px) {
+@media screen and  (min-width: 2001px) and (max-width: 2560px) {
      .kasa-logement {
           @include pageLengthdesktop();
           width: 100%;
           .kasa-logement_body{
                position: absolute;
                width: 1240px;
-               width: 90%;
+               width: 93%;
                height: 643px;
                left: 7%;
+               top: 128px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 2%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+               width: 90%;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 2%;
+               top: 532px;
+     
+          }
+     }
+     
+ }
+ @media screen and  (min-width: 1801px) and (max-width: 2000px) {
+     .kasa-logement {
+          @include pageLengthdesktop();
+          width: 100%;
+          .kasa-logement_body{
+               position: absolute;
+               width: 1240px;
+               width: 98%;
+               height: 643px;
+               //left: 5%;
+               top: 128px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 2%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+               width: 90%;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 2%;
+               top: 532px;
+     
+          }
+     }
+     
+ } 
+@media screen and  (min-width: 1441px) and (max-width: 1800px) {
+     .kasa-logement {
+          @include pageLengthdesktop();
+          width: 100%;
+          .kasa-logement_body{
+               position: absolute;
+               width: 1240px;
+               width: 98%;
+               height: 643px;
+               left: 5%;
                top: 128px;
      
           }
