--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -58,18 +58,20 @@
     
           display: flex;
           flex-wrap: wrap;
-          justify-content: space-around;
+          justify-content:space-evenly;
           height: 780px;
-          max-width: 2000px;
+          max-width: 2168px;
           width: 100%;
           border-radius: 25px;
           padding-top: 56px;
           padding: 3%;
-          margin-left: 3%;
+      
+          
+          
           .rectangle2{ 
                position: relative;
-               height: 400px;
-               max-width: 400px;
+               height: 500px;
+               max-width: 500px;
                       
                border-radius: 10px;
                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
@@ -89,9 +91,9 @@
                     position: absolute;
                     height: 52px;
                     width: 300px;
-                    width: 100%;
+                    width: 96%;
                     @include  policeStyle1();
-                    font-size: 20px;
+                    font-size: 30px;
                     margin-top: -62px;
                     margin-left: 5%;
                     margin-bottom: 20px;
@@ -108,9 +110,9 @@
     
           display: flex;
           flex-wrap: wrap;
-          justify-content: space-around;
+          justify-content:space-evenly;
           height: 780px;
-          max-width: 2064px;
+          max-width: 2168px;
           width: 100%;
           border-radius: 25px;
           padding-top: 56px;
@@ -120,8 +122,8 @@
           
           .rectangle2{ 
                position: relative;
-               height: 420px;
-               max-width: 420px;
+               height: 500px;
+               max-width: 500px;
                       
                border-radius: 10px;
                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
@@ -141,9 +143,9 @@
                     position: absolute;
                     height: 52px;
                     width: 300px;
-                    width: 100%;
+                    width: 96%;
                     @include  policeStyle1();
-                    font-size: 20px;
+                    font-size: 30px;
                     margin-top: -62px;
                     margin-left: 5%;
                     margin-bottom: 20px;
@@ -214,16 +216,16 @@
           flex-wrap: wrap;
           justify-content: space-around;
           height: 780px;
-          max-width: 1400px;
+          max-width: 1639px;
           width: 100%;
           border-radius: 25px;
           padding-top: 56px;
-          padding-left: 11%;
+          padding-left: 3%;
           
           .rectangle2{ 
                position: relative;
-               height: 340px;
-               max-width: 340px;
+               height: 360px;
+               max-width: 360px;
                       
                border-radius: 10px;
                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
@@ -371,7 +373,7 @@
      .kasa-home-thumb{
           display: flex;
           flex-wrap: wrap;
-          justify-content: center;
+          justify-content:space-evenly;
           height: 780px;
           width: 1240px;
           width: 100%;
@@ -439,7 +441,7 @@
                h2{
                     position: absolute;
                     height: 52px;
-                    width: 100%;
+                    width: 97%;
                     @include  policeStyle1();
                     font-size: 18px;
                     margin-top: -62px;
