--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -316,7 +316,7 @@
          
      }
 }     
-@media screen and (min-width: 769px) and (max-width:1024px){
+@media screen and (min-width: 993px) and (max-width:1024px){
      .kasa-home-thumb{
           display: flex;
           flex-wrap: wrap;
@@ -460,8 +460,61 @@
           }
      }
 }
-
-@media screen and (min-width: 376px) and (max-width:425px){
+@media screen and (min-width: 401px) and (max-width:425px){
+     .kasa-home-thumb{
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          align-items: center;
+          height: 255px;
+          left: -21px;
+          gap: 24px;
+          border-radius: 10px;
+          align-items: center;
+          padding: 0%;
+         
+          .rectangle2{ 
+               position: relative;
+               max-width: calc(100%);
+              // margin-bottom: 24px;
+              
+               height: 255px;
+               left: 0px;
+               top: 0px;
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               border-radius: 10px;
+              // width: 100%;
+               text-align:left; 
+              
+               h2{
+                    position: absolute;
+                    height: 52px;
+                    //width: 300px;
+                    width: 99%;
+       
+                    @include  policeStyle1();
+                    font-size: 18px;
+   
+                    margin-top: -62px;
+                    margin-left: 5%;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+                   
+      
+                    color: #FFFFFF;
+      
+               }
+               img{
+                    display: block;
+                    border-radius: 10px;
+                    width: 100%;
+                    height: 100%;
+               }    
+          }
+     }
+}     
+@media screen and (min-width: 376px) and (max-width:400px){
      .kasa-home-thumb{
           display: flex;
           flex-wrap: wrap;
