--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -465,6 +465,7 @@
           display: flex;
           flex-wrap: wrap;
           justify-content: space-between;
+          justify-content: center;
           align-items: center;
           height: 255px;
           left: -21px;
@@ -475,10 +476,10 @@
          
           .rectangle2{ 
                position: relative;
-               max-width: calc(100%);
-              // margin-bottom: 24px;
-              
-               height: 255px;
+              // max-width: calc(100%);             
+              // height: 255px;
+               max-width: fit-content;
+               height: auto;
                left: 0px;
                top: 0px;
                border-radius: 10px;
