--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -38,9 +38,9 @@
             margin: 0 1px;
             position: relative;
 
-            &:hover {
-            text-decoration: underline;
-            }
+           // &:hover {
+           // text-decoration: underline;
+           // }
 
             &.active{           
             text-decoration: underline;
