--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -1016,6 +1016,7 @@
           height: 35px;
           color: #FFFFFF;
           position: absolute;
+          display: inline-block;
           left: 93%;
     
           &.open {
@@ -1130,6 +1131,7 @@
         height: 26px;
         color: #FFFFFF;
         position: absolute;
+        display:inline-block;
         left: 86%;
 
   
