--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -33,7 +33,7 @@
               width: 100%;
               height: 100%;
               // height: auto;
-     
+              object-fit: cover;
           }     
           
           h2{
@@ -84,7 +84,7 @@
                    width: 100%;
                    height: 100%;
                    // height: auto;
-          
+                   object-fit: cover;
                }     
                
                h2{
@@ -135,6 +135,7 @@
                    border-radius: 10px;
                    width: 100%;
                    height: 100%;
+                   object-fit: cover;
                    // height: auto;
           
                }     
@@ -188,6 +189,7 @@
                    width: 100%;
                    height: 100%;
                    // height: auto;
+                   object-fit: cover;
           
                }     
                
@@ -238,7 +240,7 @@
                    width: 100%;
                    height: 100%;
                    // height: auto;
-          
+                   object-fit: cover; 
                }     
                
                h2{
@@ -307,10 +309,8 @@
                     border-radius: 10px;
                     width: 100%;
                     height: 100%;
-                    
+                    object-fit: cover;
                    
-                 
-     
                }     
           }
          
@@ -364,6 +364,7 @@
                     border-radius: 10px;
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
                }     
           }
          
@@ -410,6 +411,7 @@
                     border-radius: 10px;
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
                }     
           }
          
@@ -456,6 +458,7 @@
                     border-radius: 10px;
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
                }             
           }
      }
@@ -511,6 +514,7 @@
                     border-radius: 10px;
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
                }    
           }
      }
@@ -565,6 +569,7 @@
                     border-radius: 10px;
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
                }    
           }
      }
@@ -619,6 +624,7 @@
                     display: block;
                     border-radius: 10px;
                     width: 100%;
+                    object-fit: cover;
                }     
           }
      }
@@ -679,6 +685,7 @@
                     border-radius: 10px;
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
                }    
           }
      }
