--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -4,10 +4,36 @@
   right: 0%;
   top: 0%;
   bottom: 0%;
-  
-
   mix-blend-mode: normal;
   border-radius: 25px;
+
+  .carousel-image {
+    width: 100%;
+    max-width: 1240px;
+    height: 415px;
+    border-radius: 25px;
+    object-fit: cover;
+  }
+
+  .arrow-backwards, .arrow-forward {
+    position: absolute;
+    cursor: pointer;
+    height: 79px;
+    width: 46px;
+    top: 30%;
+    transform: translateY(-50%);
+    z-index: 1;
+    color: white;
+
+    &.arrow-backwards {
+      left: 0;
+      margin-left: 15px;
+    }
+
+    &.arrow-forward {
+      right: 2%;
+    }
+  }
   .image-counter{
     position: absolute;
     left: 48.95%;
@@ -31,36 +57,7 @@
    
 }
 
-.carousel-arrow-container img {
-     width: 100%;
-     max-width: 1240px;
-     height: 415px;
-     border-radius: 25px;
-     object-fit: cover;
-     }
-     
-     .carousel-arrow-container .MuiSvgIcon-root {
-     position: absolute;
-     cursor: pointer;
-     height: 79px;
-     width: 46px;
-     top: 30%;
-     transform: translateY(-50%);
-     z-index: 1;
-     color: white;
-     left: 96%;
-     }
-     
-     .carousel-arrow-container .MuiSvgIcon-root:first-child {
-     left: 0;
-     margin-left: 15px;
-     
-     }
-     
-     .carousel-arrow-container .MuiSvgIcon-root:last-child {
-     right: 0;
-    
-     }
+
  
 .Carousel-title-location{
   h1{
@@ -114,41 +111,37 @@
   
     mix-blend-mode: normal;
     border-radius: 25px;
-     
+    .carousel-image {
+      width: 109%;
+      max-width: unset;
+      height: 415px;
+      border-radius: 25px;
+      object-fit: cover;
+    }
+  
+    .arrow-backwards, .arrow-forward {
+      position: absolute;
+      cursor: pointer;
+      height: 79px;
+      width: 46px;
+      top: 30%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
+      }
+  
+      &.arrow-forward {
+        right: -8%;
+      }
+    }
      
   }
   
-  .carousel-arrow-container img {
-       width: 109%;
-       //max-width: 1240px;
-       max-width: unset;
-       height: 415px;
-       border-radius: 25px;
-       object-fit: cover;
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root {
-       position: absolute;
-       cursor: pointer;
-       height: 79px;
-       width: 46px;
-       top: 30%;
-       transform: translateY(-50%);
-       z-index: 1;
-       color: white;
-       left: 106%;
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root:first-child {
-       left: 0;
-       margin-left: 15px;
-       
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root:last-child {
-       right: 0;
-      
-       }
+  
    
   .Carousel-title-location{
     h1{
@@ -205,40 +198,37 @@
     
     mix-blend-mode: normal;
     border-radius: 25px;
-     
+    .carousel-image {
+      width: 100%;
+      max-width:unset;
+      height: 415px;
+      border-radius: 25px;
+      object-fit: cover;
+    }
+  
+    .arrow-backwards, .arrow-forward {
+      position: absolute;
+      cursor: pointer;
+      height: 79px;
+      width: 46px;
+      top: 30%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
+      }
+  
+      &.arrow-forward {
+        right: 2%;
+      }
+    } 
      
   }
   
-  .carousel-arrow-container img {
-       width: 100%;
-       //max-width: 1240px;
-       max-width: unset;
-       height: 415px;
-       border-radius: 25px;
-       object-fit: cover;
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root {
-       position: absolute;
-       cursor: pointer;
-       height: 79px;
-       width: 46px;
-       top: 30%;
-       transform: translateY(-50%);
-       z-index: 1;
-       color: white;
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root:first-child {
-       left: 0;
-       margin-left: 15px;
-       
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root:last-child {
-       right: 0;
-      
-       }
+ 
    
   .Carousel-title-location{
     h1{
@@ -294,41 +284,37 @@
   
     mix-blend-mode: normal;
     border-radius: 25px;
-     
+    .carousel-image {
+      width: 100%;
+      
+      height: 415px;
+      border-radius: 25px;
+      object-fit: cover;
+    }
+  
+    .arrow-backwards, .arrow-forward {
+      position: absolute;
+      cursor: pointer;
+      height: 73px;
+      width: 40px;
+      top: 32%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
+      }
+  
+      &.arrow-forward {
+        right: 2%;
+      }
+    }
      
   }
   
-  .carousel-arrow-container img {
-       width: 100%;
-       max-width: 1240px;
-       height: 415px;
-       border-radius: 25px;
-       object-fit: cover;
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root {
-       position: absolute;
-       cursor: pointer;
-       height: 79px;
-       width: 46px;
-       top: 30%;
-       transform: translateY(-50%);
-       z-index: 1;
-       color: white;
-       left:95%;
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root:first-child {
-       left: 0;
-       margin-left: 15px;
-       
-       }
-       
-       .carousel-arrow-container .MuiSvgIcon-root:last-child {
-       right: 0;
-      
-       }
-   
+  
   .Carousel-title-location{
     h1{
       position: absolute;
@@ -393,40 +379,55 @@
     border-radius: 10px;
     width: 100%;
    
-    
-    
-  }
-
-  .carousel-arrow-container img {
+    .carousel-image {
       width: 100%;
       
       height: 255px;
       border-radius: 10px;
       object-fit: cover;
-  }
-      
-  .carousel-arrow-container .MuiSvgIcon-root {
+    }
+  
+    .arrow-backwards, .arrow-forward {
       position: absolute;
       cursor: pointer;
-      height: 30px;
-      width: 40px;
-      top: 49%;
+      height: 24px;
+      width: 22px;
+      top: 54%;
       transform: translateY(-50%);
       z-index: 1;
       color: white;
-      left:93%;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
       }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:first-child {
-      left: 0;
-      margin-left: 15px;
-      
+  
+      &.arrow-forward {
+        right: 2%;
       }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:last-child {
-      right: 0;
+    }
+    .image-counter{
+      position: absolute;
+      left: 48.95%;
+      right: 49.11%;
+      top: -68.81%;
+      bottom: 2.01%;
+  
+      @include  policeStyle1();
+      font-size: 18px;
+      line-height: 142.6%;
+      /* or 26px */
+  
+      display: flex;
+      align-items: flex-end;
+      text-align: center;
+  
+      color: #FFFFFF;
+    }
     
   }
+
+  
 
   .Carousel-title-location{
    
@@ -490,6 +491,36 @@
     top: 0px;
     border-radius: 10px;
     width: 100%;
+
+    .carousel-image {
+      width: 100%;
+      
+      height: 255px;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+  
+    .arrow-backwards, .arrow-forward {
+      position: absolute;
+      cursor: pointer;
+      height: 22px;
+      width: 20px;
+      top: 54%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
+      }
+  
+      &.arrow-forward {
+        right: 2%;
+      }
+    }
+
+
     .image-counter{
       position: absolute;
       left: 48.95%;
@@ -509,37 +540,6 @@
       color: #FFFFFF;
     }
     
-    
-  }
-
-  .carousel-arrow-container img {
-      width: 100%;
-      
-      height: 255px;
-      border-radius: 10px;
-      object-fit: cover;
-  }
-      
-  .carousel-arrow-container .MuiSvgIcon-root {
-      position: absolute;
-      cursor: pointer;
-      height: 30px;
-      width: 40px;
-      top: 49%;
-      transform: translateY(-50%);
-      z-index: 1;
-      color: white;
-      left:90%;
-      }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:first-child {
-      left: 0;
-      margin-left: 15px;
-      
-      }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:last-child {
-      right: 0;
     
   }
 
@@ -607,6 +607,34 @@
     top: 0px;
     border-radius: 10px;
     width: 100%;
+
+    .carousel-image {
+      width: 100%;
+      
+      height: 255px;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+  
+    .arrow-backwards, .arrow-forward {
+      position: absolute;
+      cursor: pointer;
+      height: 20.8px;
+      width: 12.67px;
+      top: 54%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
+      }
+  
+      &.arrow-forward {
+        right: 2%;
+      }
+    }
     .image-counter{
       position: absolute;
       left: 48.95%;
@@ -629,36 +657,7 @@
     
   }
 
-  .carousel-arrow-container img {
-      width: 100%;
-      
-      height: 255px;
-      border-radius: 10px;
-      object-fit: cover;
-  }
-      
-  .carousel-arrow-container .MuiSvgIcon-root {
-      position: absolute;
-      cursor: pointer;
-      height: 30px;
-      width: 40px;
-      top: 49%;
-      transform: translateY(-50%);
-      z-index: 1;
-      color: white;
-      left:87%;
-      }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:first-child {
-      left: 0;
-      margin-left: 15px;
-      
-      }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:last-child {
-      right: 0;
-    
-  }
+ 
 
   .Carousel-title-location{
     
@@ -711,22 +710,47 @@
     right: 0%;
     top: 0%;
     bottom: 0%;
-    
-
+  
     mix-blend-mode: normal;
-    border-radius: 25px;
-    height: 255px;
-    width: 335px;
+    border-radius: 10px;
     width: 100%;
     left: 0px;
     top: 0px;
-    border-radius: 10px;
+    
+
+    .carousel-image {
+      width: 100%;
+      max-width: 335px;
+      height: 255px;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+  
+    .arrow-backwards, .arrow-forward {
+      position: absolute;
+      cursor: pointer;
+      height: 19.8px;
+      width: 11.67px;
+      top: 27%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
+      }
+  
+      &.arrow-forward {
+        right: 2%;
+      }
+    }
     .image-counter{
       position: absolute;
       left: 48.95%;
       right: 49.11%;
-      top: -68.81%;
-      bottom: 2.01%;
+     
+      bottom: 53%;
   
       @include  policeStyle1();
       font-size: 18px;
@@ -744,37 +768,7 @@
     
   }
 
-  .carousel-arrow-container img {
-      width: 100%;
-      
-      height: 255px;
-      border-radius: 10px;
-      object-fit: cover;
-  }
-      
-  .carousel-arrow-container .MuiSvgIcon-root {
-      position: absolute;
-      cursor: pointer;
-      height: 30px;
-      width: 40px;
-      top: 49%;
-      transform: translateY(-50%);
-      z-index: 1;
-      color: white;
-      left:88%;
-      }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:first-child {
-      left: 0;
-      margin-left: 15px;
-      
-      }
-      
-      .carousel-arrow-container .MuiSvgIcon-root:last-child {
-      right: 0;
-    
-  }
-
+ 
   .Carousel-title-location{
     
     h1{
