--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -1010,14 +1010,16 @@
         color: #FFFFFF;
       }
 
-        .collapse-icon {
+        img {
           transition: transform 0.3s ease-in-out;
-          width: 38px;
-          height: 35px;
+          width: 15.56px;
+          height: 15.56px;
           color: #FFFFFF;
           position: absolute;
           display: inline-block;
-          left: 93%;
+          left: 95%;
+          object-fit: cover;
+              
     
           &.open {
             transform: rotate(180deg);
@@ -1124,16 +1126,15 @@
   
         color: #FFFFFF;
       }
-      .collapse-icon {
+      img {
         transition: transform 0.3s ease-in-out;
-        width: 60px;
-        width: 18%;
-        height: 26px;
+        width:11.96px;
+        height: 13.2px;
         color: #FFFFFF;
         position: absolute;
         display:inline-block;
-        left: 86%;
-
+        left: 92%;
+        object-fit: cover;
   
         &.open {
           transform: rotate(180deg);
@@ -1234,15 +1235,15 @@
     
           color: #FFFFFF;
         }
-        .collapse-icon {
+        img {
           transition: transform 0.3s ease-in-out;
-          width: 55px;
-          width: 10%;
-          height: 26px;
+          width:11.96px;
+          height: 13.2px;
           color: #FFFFFF;
           position: absolute;
-          left: 91%;
-
+          display:inline-block;
+          left: 92%;
+          object-fit: cover;
     
           &.open {
             transform: rotate(180deg);
@@ -1344,16 +1345,15 @@
 
       color: #FFFFFF;
     }
-    .collapse-icon {
+    img {
       transition: transform 0.3s ease-in-out;
-      width: 55px;
-      width: 10%;
-      height: 26px;
+      width:11.96px;
+      height: 13.2px;
       color: #FFFFFF;
       position: absolute;
-      left: 91%;
-
-
+      display:inline-block;
+      left: 92%;
+      object-fit: cover;
       &.open {
         transform: rotate(180deg);
       }
@@ -1454,15 +1454,15 @@
 
     color: #FFFFFF;
   }
-  .collapse-icon {
+  img {
     transition: transform 0.3s ease-in-out;
-    width: 55px;
-    width: 10%;
-    height: 26px;
+    width:13.96px;
+    height: 13.2px;
     color: #FFFFFF;
     position: absolute;
-    left: 91%;
-
+    display:inline-block;
+    left: 96%;
+    object-fit: cover;
 
     &.open {
       transform: rotate(180deg);
@@ -1563,13 +1563,15 @@
           color: #FFFFFF;
         }
   
-          .collapse-icon {
-            transition: transform 0.3s ease-in-out;
-            width: 38px;
-            height: 35px;
-            color: #FFFFFF;
-            position: absolute;
-            left: 91%;
+        img {
+          transition: transform 0.3s ease-in-out;
+          width: 15.56px;
+          height: 15.56px;
+          color: #FFFFFF;
+          position: absolute;
+          display: inline-block;
+          left: 93%;
+          object-fit: cover;
       
             &.open {
               transform: rotate(180deg);
@@ -1671,13 +1673,15 @@
           color: #FFFFFF;
         }
   
-          .collapse-icon {
-            transition: transform 0.3s ease-in-out;
-            width: 55px;
-            height: 50px;
-            color: #FFFFFF;
-            position: absolute;
-            left: 93%;
+        img {
+          transition: transform 0.3s ease-in-out;
+          width: 17.56px;
+          height: 17.56px;
+          color: #FFFFFF;
+          position: absolute;
+          display: inline-block;
+          left: 96%;
+          object-fit: cover;
       
             &.open {
               transform: rotate(180deg);
@@ -1781,13 +1785,15 @@
           color: #FFFFFF;
         }
   
-          .collapse-icon {
-            transition: transform 0.3s ease-in-out;
-            width: 55px;
-            height: 50px;
-            color: #FFFFFF;
-            position: absolute;
-            left: 93%;
+        img {
+          transition: transform 0.3s ease-in-out;
+          width: 17.56px;
+          height: 17.56px;
+          color: #FFFFFF;
+          position: absolute;
+          display: inline-block;
+          left: 96%;
+          object-fit: cover;
       
             &.open {
               transform: rotate(180deg);
